# saritasa-sns-sqs-communicator

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  docker-compose.yaml  pyproject.toml  tasks.py
.github/: settings.yaml
.github/workflows/: checks.yaml
sns_sqs_communicator/: __init__.py  cli.py  fifo_attributes_creator.py  local.py  message_poll_worker.py  messages.py  metrics.py  queue.py  schemas.py  sqs_poll_worker.py  topic.py  types.py
sns_sqs_communicator/clients/: __init__.py  sns.py  sqs.py
sns_sqs_communicator/parsers/: __init__.py  protocol.py  sns.py  sqs.py
sns_sqs_communicator/processing/: __init__.py  core.py
sns_sqs_communicator/sentry/: __init__.py  processing.py
sns_sqs_communicator/testing/: __init__.py  plugin.py  shortcuts.py  worker.py
tests/: conftest.py  test_canceled.py  test_failure.py  test_processing.py  test_queue.py  test_schemas.py  test_success.py  test_todo.py
tests/queues/: __init__.py  messages.py  parsers.py  processors.py  schemas.py  worker.py
